webroot/css/custom.css
/* Global custom styles go here */
.table-vertical-align > thead > tr > th,
.table-vertical-align > tbody > tr > th,
.table-vertical-align > tfoot > tr > th,
.table-vertical-align > thead > tr > td,
.table-vertical-align > tbody > tr > td,
.table-vertical-align > tfoot > tr > td {
    vertical-align: middle;
}

.required label::after {
    content: " *";
    color: red;
}

